--- a/scene_decompose/.gitignore
+++ b/scene_decompose/.gitignore
@@ -1,3 +1,8 @@
+/models
+.vscode
+run_tra.sh
+__pycache__
+
 # Build artifacts
 build/
 dist/
@@ -33,7 +38,3 @@ htmlcov/
 venv/
 env/
 ENV/
-
-# Project specific
-debugging.py
-run_visualization.py
